stonks update, today i learned

--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -7,14 +7,16 @@ export const metadata = {
 
 # 1 Year of Stonks
 
-A year ago, I started an experiment. Knowing nothing about the stock market, I opened a Wealthsimple account and deposited $1000 to begin trading. The goal was to see what that balance will be in exactly a year. This was because I believed that making real trades with real money would teach me more about the market than simply reading Investopedia articles. Learning was the primary objective, but if I happened to make a slight profit that would be pretty nice too.
+A year ago, I started an experiment. Knowing nothing about the stock market, I opened a Wealthsimple account and deposited $1000 to begin trading. The goal was to see what that balance will be in exactly a year. I believe that making real trades with real money would teach me more about the market than simply reading Investopedia articles. Learning was the primary objective, but if I happened to make a slight profit that would be pretty nice too.
 
 Fast forward a year, and that initial balance is now $5,847.28. Just today, my account gained a 117.76% profit, partly due to the [unreal stock market](https://www.theverge.com/22251427/reddit-gamestop-stock-short-wallstreetbets-robinhood-wall-street) trends spurred by r/wallstreetbets.
 
 ![balance](/images/2021-01-27-stocks/Jan27.png)
 _My trading account today (why it's now on Questrade explained below)_
 
-Although many others have had way more [spectacular](/images/2021-01-27-stocks/dfv.png) returns, I'm quite happy with how things turned out. Specifically, I learned a few lessons from my experience, which hold real weight to me since I was able to witness them myself. Whether you're a seasoned trader or a novice just hopping on the bandwagon, I hope you can find some of these general ideas useful.
+Although many others have had way more [spectacular](/images/2021-01-27-stocks/dfv.png) returns, I'm quite happy with how things turned out. Specifically, I learned a few lessons from my experience, which feel more tangible to me since I went through real trades to learn them. The goal of my writing this is to keep track for myself, but you may find some points useful for yourself.
+
+Edit: My balance has fallen back to $1000 😂, a price that I paid to learn a very valuable lesson (covered below). I'm glad this happened, since I get to look at my trades from a bearish standpoint as well.
 
 _Disclaimer: The references below are an opinion and is for information purposes only. It is not intended to be investment advice. Seek a duly licensed professional for investment advice._
 
@@ -24,7 +26,7 @@ _Disclaimer: The references below are an opinion and is for information purposes
 
 ### 1. Think long term
 
-Before making a purchase, decide for yourself what timeframe you prefer to trade on beforehand. How long are you okay with planning for?
+Before making a purchase, I need to decide for myself timeframe I would prefer to trade on beforehand. How long am I okay with planning for?
 
 When I first started, I did not invest with longer term market trends in mind. I overreacted based on short term spikes and dips, which weren't compatible with my trading behavior, which involved checking the stock market every month or so. A missed opportunity that taught me this lesson was when I decided not to purchase TSLA stock when it was at $400 in March. Instead of looking at the long term outlook, I waited to snag some shares whenever it would hit $250, which actually never happened. At the time, a $150 difference seemed significant. Now, the pre-split stock is valued at $3,456. A great opportunity was missed because I over-optimized for the short term.
 
@@ -32,19 +34,18 @@ When I first started, I did not invest with longer term market trends in mind. I
 
 Trading very short term is also more costly if you count in the commissions that your brokerage may make on a per-trade basis.
 
-### 2. Commit when you decide (💎✋)
+### 2. Some things are truly unpredictable
 
-A problem that I faced early on when making trades was the uncertainty that came with trading stocks as a novice. Every time I sent in an order, I would second-guess myself. This wasn't good because I would miss out on great opportunities.
+With all the Reddit fueled mania going on these days, I started to feel that the less I thought about a decision, the more profits I made. I learned the hard way that I just happened to be very lucky for some trades, and that there was absolutely no correlation between reckless investing and pure chance. We're currently in interesting times; the stock market is at an all-time high while the economy is in turmoil and record numbers of retail investors are entering the arena. The possibility of crazy things happening really is not that low.
 
-The solution: Second guess yourself as much as you want before you buy or sell. Take a deep breath, weigh in the factors, and agree to be okay if the trade does not work out. Click the button, and yell out: "YOLO! We are heading to tendie town now!". Only invest what you are okay with losing.
+Robinhood's abrupt trading ban on a few stocks is a prime example of how a the outlook of a stock could totally flip in just a few hours. I had call options on NOK, AMC and BB, summing up to over $3000 in my account. Things were looking good; these hot stocks were just hitting the mainstream media, and I was betting on FOMO (fear of missing out) that would push these stocks even higher. That sentiment totally disappeared the next day, when Robinhood effectively banned the buying of just these stocks, which instantly tanked them and wiped away my profits:
 
-The stock market is constantly changing. Factors may change, and new trends are always happening. Just go with the flow, and think about your next move instead of mulling over the irreversible past.
+![decline](/images/2021-01-27-stocks/decline.png)
 
-For example, I bought 15 shares of NIO at $17 in September, when the stock was at the highest it had ever been. I decided to hold despite fluctuations because I believed in the upside potential of the Chinese EV sector. Later, I sold it at $58. I'm also holding my GME shares, partly for the meme, but also because I really think we'll see some big upside in the near future.
+Basically I learned to not follow investment advice from this meme:
+![smooth brain meme](/images/2021-01-27-stocks/smoothBrain.png)
 
-![nio graph](/images/2021-01-27-stocks/nio.png)
-
-### 3. Late is better than never
+### 3. Stocks can always go higher (and lower)
 
 It's nearly impossible to know whether a stock is at its peak or trough. Be okay with buying on slight markup and selling before it peaks. Look at the longer term performance of the stock (1 month - 1 year) to see whether there's real room for growth.
 
@@ -52,29 +53,37 @@ One situation that brought this lesson home was when I ironically bought GME on 
 
 ![gme meme](/images/2021-01-27-stocks/hodl.png)
 
-There were many signs that this would actually happen. On Reddit, [analyses](https://www.reddit.com/r/wallstreetbets/comments/g0lc0j/gamestop_gme_the_biggest_short_squeeze_of_your/) about the short squeeze have been floating around for a year, and were really starting to gain momentum by December. If you've done your research and are confident in the potential of a stock, just go for it. There may not be many chances to act ahead of the curve.
-
-### 4. Stocks is about group behavior, not finance
+### 4. The market is about group behavior, not finance
 
 Traditional investment strategy uses well-refined [strategies](https://www.investopedia.com/investing/investing-strategies/), but that's being challenged. Now, with the advent of commission free trading, we are seeing the emergence of a new player in the field: the retail investor. Apps like Robinhood and Wealthsimple have replaced Tiktok in the top charts, and the number of individual traders is skyrocketing. r/wallstreetbets has exploded from 1M to 7M+ users in the span of a month, and the stock market is getting more media attention than ever. The retail investor (like me) usually does not follow the time-old strategies used by institutional investors, which means that herd mentality now has some real impacts on the market. The use of memes and public investment advice actually influences the buying behavior of thousands of traders, many of whom are willing to bet on high risk, high reward ventures. In my opinion, I think that being able to predict whether people will buy can be just as useful as predicting the success of a company.
 
 ![efficient market hypothesis](/images/2021-01-27-stocks/efficient.jpg)
 
-As part of my experiment, I decided at the beginning of this year to invest based on Reddit sentiment, to see if I could act before the masses of retail traders. As such, I bought about $300 worth of BB, AMC and NOK calls and stocks. This was by far my riskiest move, and it contributed to a $3500 gain in my account just on January 27. I'm not really sure if this was an outlier result, so I'll wait to see how this move turns out.
+As part of my experiment, I decided at the beginning of this year to invest based on Reddit sentiment instead of fundamentals. So I bought about $300 worth of BB, AMC and NOK calls and stocks. This was by far my riskiest move, and it contributed to the biggest fluctuations in my account. Here, I made a fatal mistake; I started to become emotionally invested after watching the revolutionary movment on r/wallstreetbets. After making a $3700 gain, I didn't sell despite the red flags (high volatiliy, more than 50% of the account in high risk options), and ended up loosing it all and then some. This lesson could be summed up by a Warren Buffet quote:
+
+> I’ll tell you how to become rich: close all doors, beware when others are greedy and be greedy when others are afraid.
+
+Sentiment can either reflect or contradict the current state of the market, and I'm sure that it provides many hints about what the market will be like in the future.
 
 ### 5. Trade proactively
 
-The best opportunities for significant gains are when you act before the market. Most of the time, this means that the best time to buy/sell is before any major news hits the headlines. Unless you are somehow on top of everything that is happening, speculation is unavoidable. Be willing to act on speculation, within the window of your risk tolerance.
+My best trades happened as a result of acting ahead of the market. Most of the time, I had to buy/sell a security before a short term trend or long term projection hits the headlines. Since I didn't have the time to constantly stay on top of everything that is happening, I acted a lot on speculation. I was okay with betting 10% of my portfolio or less on short term trends that could either go flat or blow up.
 
-### 6. Keep risk in check
+For example, I bought 15 shares of NIO at $17 in September, when the stock was at the highest it had ever been. I decided to hold despite fluctuations because I believed in the upside potential of the Chinese EV sector. Later, I sold it at $58. I'm also holding my GME shares, partly for the meme, but also because I really think we'll see some big upside in the near future.
 
-At the end of the day, you can always suffer heavy losses at any time. That can be mitigated by diversifying your portfolio, and staying aware of the risk in your account.
+![nio graph](/images/2021-01-27-stocks/nio.png)
 
-My preference is to have 60% of my portfolio in long term industry trends (for example, EV, AI, networking and microprocessing companies). 30% of my account is for mid term investments, which I think will have strong movement in the short to mid term. For the memes, the remaining 10% of my portfolio in high risk options, which I would be totally okay with losing. Every month or so, I would rebalance my account to keep these proportions in check.
+### 6. Hedge your moves and keep risk in check
+
+At the end of the day, you can always suffer heavy losses at any time. My strategy for mitigating this was by diversifying my portfolio, and staying aware of the risk in my account.
+
+My preference is to have 60% of my portfolio in long term industry plays (for example, EV, AI, networking and microprocessing companies). 30% of my account is for mid term investments, which I think will have strong movement in the short to mid term. For the memes, the remaining 10% of my portfolio in high risk options (YOLO), which I would be totally okay with losing. Every month or so, I would rebalance my account to keep these proportions in check. For my YOLO plays, I usually should start to sell after they become more than 20% of my portfolio.
+
+My fatal error this month was that I let my YOLO gains grow significantly (at one point reaching over 60% of my portfolio) without cashing out. Those high risk ventures istantly collapsed when the market changed (ie Robinhood restricting trades on the call options I had), which could've been avoidable if I kept my portfilio balanced.
 
 ### 7. Have fun!
 
-Stock trading can be stressful, especially if you have a lot on the line. My experience with trading has been a positive experience overall, especially since I have come to terms with the chance of losing my entire account balance. Trading with that mindset lets me make some YOLO plays that bring some excitement to my account. It's even better when I'm trading meme stocks that are hot topics on Reddit memes.
+Stock trading can be stressful, especially if you have a lot on the line. My experience with trading has been a positive experience overall, especially since I have decided beforehand that I would be okay with losing my entire balance. Trading with that mindset definitely helped take away the stress from the experience.
 
 ![thanos meme](/images/2021-01-27-stocks/thanos.png)
 
@@ -87,8 +96,5 @@ I traded exclusively on stocks on Wealthsimple when I started my experiment. Lat
 ---
 
 Looking back, I definitely have no regrets from putting $1k into this experiment. I learned a ton about the stock market, which I definitely would not have done, if I did put money in the game. The stock market underscores a huge potential of the free market, and reflects and catalyzes a lot of change and trends in the economy. I'd highly recommend you to explore this space if you haven't already, just don't put in more than you can lose! I'm looking forward to seeing where this trading account will go over the next year.
-
-Also, don't overthink it! I feel that the less I think about a decision, the more gains I make. Although these definitely are interesting times.
-![smooth brain meme](/images/2021-01-27-stocks/smoothBrain.png)
 
 If you have any questions about trading, market trends, and brokerages, I'm always down to chat! Feel free to reach me at any of the handles you can find on my website. May your stocks shoot past the moon, and your pockets be blessed with countless juicy tendies!
