--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -1,3 +1,5 @@
+import { Carousel } from "antd";
+
 # Noisy
 
 ![cover img](/images/projects/noisy/banner.png)
@@ -36,9 +38,13 @@ My big takeaway from this project is that music generation has now matured to a 
 
 Github: https://github.com/JonathanXu1/noisy-bot
 
-## Some promo images
+## Promo images
 
-![desc1](/images/projects/noisy/description1.png)
-![desc2](/images/projects/noisy/description2.png)
-![desc3](/images/projects/noisy/description3.png)
-![discord player](/images/projects/noisy/preview.png)
+<Carousel autoplay>
+  <img src="/images/projects/noisy/description1.png" />
+  <img src="/images/projects/noisy/description2.png" />
+  <img src="/images/projects/noisy/description3.png" />
+  <img src="/images/projects/noisy/preview.png" />
+</Carousel>
+
+---
