--- a/pages/blog/2020-07-25-on-hackathons.mdx
+++ b/pages/blog/2020-07-25-on-hackathons.mdx
@@ -11,11 +11,11 @@ export const metadata = {
 
 ![banner](/images/2020-07-25-on-hackathons/banner.jpg)
 
-Are you going to X hackathon? Didn't I see you at Y hackathon? Hmm I should go to Z hackathon, shouldn't I? Hackathons have been around for 20 years, and a sizeable chunk of my college cohort still seems to be very interested in them. These competitions have morphed due to factors such as changing expectations and demographics. Hopefully this article can help people can see them at their current face value instead of what they used to be known for.
+Are you going to X hackathon? Didn't I see you at Y hackathon? Hmm I should go to Z hackathon, shouldn't I? Hackathons have been around for 20 years, and a sizeable chunk of my college cohort still seems to be very interested in them. These competitions have morphed due to factors such as changing expectations and demographics. Hackathons have turned into something that's very different from what they used to be.
 
 ## Hold on, what are you talking about?
 
-Hackathons have been changing over the years. I started doing them in 2015, during the time which my hackathon friends and I colloquially refer to as the end of the "Golden Age" of hackathons. At this time, the larger Canadian and American events (off the top of my mind: [MHacks](https://mhacks.org/), [Hack the North](https://hackthenorth.com/), [Pennapps](http://pennapps.com/)) were peaking in prominence and size. Hackathons were just starting to become mainstream for college students, and my friends and I were one of the lucky few highschoolers who got to attend them.
+I started going to hackathons in 2015, during a colloquial "Golden Age" of hackathons. Back then, the larger Canadian and American events (off the top of my mind: [MHacks](https://mhacks.org/), [Hack the North](https://hackthenorth.com/), [Pennapps](http://pennapps.com/)) were peaking in prominence and size. Hackathons were just starting to become mainstream for college students, and my friends and I were one of the lucky few highschoolers who got to attend them this early.
 
 This recap video for MHacks V shows what the energy and atmosphere was like back then:
 
