--- a/pages/blog/2020-07-25-on-hackathons.mdx
+++ b/pages/blog/2020-07-25-on-hackathons.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "Hackathon No More",
+  title: "Hackathon No More?",
   url: "2020-07-25-on-hackathons",
   date: 1598313600,
   length: 9,
 };
 
-# Hackathon No More
+# Hackathon No More?
 
 ### Jul 25, 2020
 
