work on new blog post

--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -23,24 +23,28 @@ This place is cozy. Getting too cozy.
 
 Wake up, food, school, food, walk, school, food, sleep.
 
-My being is literally atrophying. We are in this together. One more day, let's endure this. Endure one more day.
+My being is literally atrophying. One more day, let's endure this. Endure one more day.
 
-Looking forward, an online term is inevitable. Endure this online term, and we'll talk soon. Let's meet up after all this, okay?
+Looking forward, an online term is inevitable. Endure this online term, and we'll talk soon.
 
-The next two terms will be online only. Each of us has an important part to play in limiting the risk of COVID-19 and maintaining safety both on and off campus.
+Man, it's been too long. Let's meet up after all this?
+
+The next two terms will be online only.
+
+Each of us has an important part to play in limiting the risk of COVID-19 and maintaining safety both on and off campus.
 
 Surely there has something more meaningful to do than this.
 
 Ding! You've got mail. Title: [Hack Lodge] Micro-campus for projects this fall!  
 A [school 2.0](https://school2point0.com/); a micro-campus to learn and create together with 30 young people filled with curiosity and kindness this fall. There will be a rigorous COVID protocol and it will operate as a bubble with no outside interactions.
 
-I decide I had to leave this place and go to School 2.0. I interview with Marley and Raffi, pester them a bit, convince my parents, buy a plane ticket, and head off to Truchas, New Mexico.
+I decide I had to leave this place and go to School 2.0. I interview with Marley and Raffi, convince my parents, buy a plane ticket, and head off to Truchas, New Mexico.
 
 ## Desolate New Mexico
 
 On the plane ride I finally come to grasp the utter spontaneity of my decision. I'm going to a place I've never been to, by myself, in a pandemic, not knowing any of the residents beforehand. I could get abducted for my organs and no one will know. Oh well, let's see how it goes.
 
-It goes very well. A warm desert surrounded by sharp mountains and covered with foreign plants greets my arrival. Everything was new; the land, the house, and especially the people. For once in a long time, I was with people who learned and built things out of an innate curiosity and passion, instead of a fear or desire to get ahead in finite rat-races such as grades or prestige.
+It went very well. A warm desert surrounded by sharp mountains and covered with foreign plants greeted my arrival. Everything was new; the land, the house, and especially the people. For once in a long time, I was with people who learned and built things out of an innate curiosity and passion, instead of the need or desire to get ahead in finite rat-races.
 
 We lived in the middle of nowhere, but [the house](https://www.truchaspeaksplace.com/) was never quiet or empty. For me, as an only child who spent much time in solitude, this was transformative.
 
@@ -53,10 +57,39 @@ I did a lot of new firsts here, including:
 - doing a winter midnight balcony hackathon
 - playing with power lasers
 
-So it turns out that my impulsive decision was one of the best choices I've ever made. I wasn't sure if this was a fluke or a rule, so I decided to live more spontaneously to find out.
+So it turned out that my impulsive decision was one of the best choices I've ever made. I wasn't sure if this was a fluke or a rule, so I decided to live more spontaneously to find out.
 
 Two months and many great memories later, the program came to an end. I asked my new friend Geffen if I could go live with him in SF, and he said yes. And so 4 of us started a road trip West to California.
 
 ## Golden Bay Area
 
-## Unfamiliar Taipei
+Grand Canyon. Las Vegas. Death Valley. San Louis Obispo. Silicon Valley. It was crazy feeling, finally being in the places I've heard about for so long. The raw beauty from these intense pockets of memories was overwhelming. I felt awake and at peace.
+
+I don't miss Toronto one bit.
+
+The warm winter sunlight bathes Topos house
+in which memelords and bright minds ideas espouse
+Admidst covid, all is still as Pyongyang
+all on pause, VC dinners gone with FANG
+Stonks go up and big papers come out
+the now is theirs, the future is yours
+
+I learned a few things:
+
+- There's going to be a place that calls out to you. Just act on your gut feeling, and wonderful things may happen.
+- That community that truly resonates with your values and interests really does exist, you just have to look for it.
+- It's a dangerous thing to settle on an environment that you know isn't optimal. Take the leap to explore, and you won't be disappointed.
+- You're never too young to do something. Chances are someone your age has already done it.
+
+A few fantasies broke for me during my time in SF:
+
+- this place is a modern, utopian city
+- most companies are driven by a meaningful mission statement
+- the value systems of those in tech are diverse and unique
+- VC is only driven by altruism and a genine excitement for the future
+- people are pushing deep tech and applying innovations to every aspect of daily life
+- the social safety net is decent and paid for by the economic successes of big tech
+
+I did contracting work for a Chinese company, then full stack dev work as the third employee in a budding NLP startup. I lived in a company AirBnB, did a 10 day hackathon, and [cooked a lot](/cooking). I got an offer from Google and a spot in a startup accellerator in Taiwan.
+
+## Taipei
