--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -23,7 +23,7 @@ A: Haha good one.
 
 This place is cozy. Getting too cozy.
 
-Wake up, food, school, food, walk, school, food, sleep.
+Wake up, eat, school, eat, walk, school, eat, sleep.
 
 My being is literally atrophying. One more day, let's endure this. Endure one more day.
 
@@ -97,7 +97,7 @@ I don't miss Toronto one bit.
 
 > The lucid brumal sunlight bathes Topos house  
 > in which memelords and bright minds ideas espouse  
-> Admidst covid, all is still as Pyongyang  
+> Amidst covid, all is still as Pyongyang  
 > all on pause, VC dinners gone with FANG  
 > Stonks go up and ml papers come out  
 > ideas and fantasies mix and fly about
@@ -114,11 +114,11 @@ A few fantasies broke for me during my time in SF:
 - this place is a modern, utopian city
 - most companies are driven by a meaningful mission statement
 - the value systems of those in tech are diverse and unique
-- VC is only driven by altruism and a genine excitement for the future
+- VC is only driven by altruism and a genuine excitement for the future
 - people are pushing deep tech and applying innovations to every aspect of our lives
 - there is a social safety net that is paid for by big tech
 
-I did contracting work for a Chinese company, then full stack dev work as the third employee in a budding NLP startup. I lived in a company AirBnB, did a 10 day hackathon, and [cooked a lot](/cooking). I got a job offer from Google and a spot in a startup accellerator in Taiwan.
+I did contracting work for a Chinese company, then full stack dev work as the third employee in a budding NLP startup. I lived in a company AirBnB, did a 10 day hackathon, and [cooked a lot](/cooking). I got a job offer from Google and a spot in a startup accelerator in Taiwan.
 
 <Carousel autoplay>
   <img src="/images/2020-03-11-travels/sf1.jpg" />
@@ -138,7 +138,7 @@ By now I'm sure that there are many many more inspiring people and interesting l
 
 ## Taipei
 
-About this time, the stars and planets aligned so that I was at a crossroads. I could decide between a founding engineer position at a budding company in SF, or throw everything to the wind and go to Taiwan to do my own thing. A tug of war between my responsibilities, outlooks, and instints ensued.
+About this time, the stars and planets aligned so that I was at a crossroads. I could decide between a founding engineer position at a budding company in SF, or throw everything to the wind and go to Taiwan to do my own thing. A tug of war between my responsibilities, outlooks, and instincts ensued.
 
 So far, I had seen prime examples of people who had followed their calling and forged an unconventional path for themselves. Inspired to know that this was indeed possible, I decided to follow my gut and try to discover myself in Taiwan.
 
