--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -160,6 +160,6 @@ So I'll take this chance to explore and find out what truly matters in my life. 
 
 > The world is your oyster and oysters don't last long
 
-(because they go bad fast)
+(you only have a finite amount of time before they expire)
 
 ---
